# view

./: .gitignore  Cargo.toml  README.md  package.json  pyproject.toml  tsconfig.base.json  view_py_runner.py
apps/annotate-mock/: index.html  package.json  tsconfig.json  vite.config.ts
apps/annotate-mock/src/: App.tsx  app.css  main.tsx
apps/desktop/: package.json  vite.config.ts
apps/desktop/scripts/: package-release.mjs
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/scripts/: package-release.mjs
apps/tauri/src/: App.tsx  RoiAnnotationModal.tsx  RoiWorkspace.tsx  ViewNavbar.tsx  ViewerWorkspace.tsx  api.ts  app.css  main.tsx  roiStore.ts  viewStore.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/tauri/src-tauri/src/: main.rs
apps/view-py/: pyproject.toml
apps/view-py/pyside6/: main.py  native_shell.py  pyproject.toml
apps/view-py/pyside6/tests/: test_native_shell.py
apps/view-py/src/view_py/: __init__.py  main.py  native_shell.py
apps/view-py/tests/: test_native_shell.py
apps/view-py/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/view-py/web/src/: App.tsx  app.css  host.ts  main.tsx
apps/view-rs/: .package.json.swp  index.html  package.json  tsconfig.json  vite.config.ts
apps/view-rs/src/: App.tsx  RoiAnnotationCanvas.tsx  RoiAnnotationModal.tsx  RoiWorkspace.tsx  ViewApp.tsx  ViewerWorkspace.tsx  app.css  viewEffects.ts
apps/view-rs/src-tauri/: Cargo.toml
apps/view-rs/src-tauri/src/: main.rs
apps/view-rs/tauri/: Cargo.toml  tauri.conf.json
apps/view-rs/tauri/src/: main.rs
apps/view-rs/web/src/: App.tsx  PosViewerApp.tsx  ViewApp.tsx  ViewerWorkspace.tsx  app.css  (+3 more)
crates/view-backend/: Cargo.toml
crates/view-backend/src/: lib.rs
crates/view-domain/: Cargo.toml
crates/view-domain/src/: lib.rs
crates/view-image/: Cargo.toml
crates/view-image/src/: lib.rs
crates/view-roi/: Cargo.toml
crates/view-roi/src/: lib.rs
scripts/: run-workspaces.mjs
(+5 files in other folders)
