[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "view-root"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "nd2>=0.10",
  "numpy>=2.0.0",
  "PySide6>=6.7.0",
  "tifffile>=2025.1.10",
  "websockets>=15.0.0",
]

[project.scripts]
view-py = "view_py_runner:main"

[tool.setuptools]
py-modules = ["view_py_runner"]
