[build-system]
requires = ["hatchling>=1.27", "pathspec<1"]
build-backend = "hatchling.build"

[project]
name = "view-root"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "core-py",
  "nd2>=0.10",
  "numpy>=2.0.0",
  "PySide6>=6.7.0",
  "tifffile>=2025.1.10",
  "websockets>=15.0.0",
]

[project.scripts]
view-py = "view_py_runner:main"

[tool.hatch.build.targets.wheel]
include = ["view_py_runner.py"]

[tool.uv.sources]
core-py = { path = "packages/core-py", editable = true }
